speakers and redis

--- a/api/session/models/session.settings.json
+++ b/api/session/models/session.settings.json
@@ -72,6 +72,9 @@
       },
       "type": "string",
       "required": true
+    },
+    "speakers": {
+      "collection": "speaker"
     }
   }
 }
